Fixed search results spacing

--- a/css/main.css
+++ b/css/main.css
@@ -48,11 +48,13 @@
 	color: #fff;
 	border: 1px solid #000000;
 	height: 200px;
-	width: 230px;
+	width: 200px;
 	margin: 0 auto;
 	text-align: center;
 	float: left;
 	padding-top: 15px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 img {
